[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/AI/Enemy.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.756863, 0.2, 0.752941, 1 )

[sub_resource type="CapsuleMesh" id=1]
material = SubResource( 3 )
mid_height = 2.0

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 2, 1 )

[sub_resource type="SphereShape" id=4]
radius = 20.0

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1.05, 2, 1.05 )

[node name="Enemy" type="KinematicBody"]
collision_layer = 64
collision_mask = 125
script = ExtResource( 1 )

[node name="Pivot" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -1, -2, -1, 2, 4, 2 )

[node name="FieldOfView" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="FieldOfView"]
shape = SubResource( 4 )

[node name="Hitbox" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
shape = SubResource( 5 )

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="body_entered" from="FieldOfView" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="FieldOfView" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
